Finally decided to finish this thing!  Implemented start, stop, save, view on server.  Implemented reinitalization.  Fixed reading user input.  And most likely other stuff I forgot about.