@@ -1,54 +1,87 @@
 #!/bin/bash
-# Version 1
+# Version 1.1
 
 DEBUG=1
 
 # ------ Constants ------
 SETTINGS='.mcadmin'
 GIT_SETTINGS='.mcadmin.git'
-MC_JAR='minecraft_server.jar'
 JAR_URL='https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft_server.jar'
 SNAPSHOT_URL='https://raw.github.com/chosenken/MCAdmin/master/snapshotURL.sh'
 SS_URL_FILE='snapshotURL.sh'
+USERNAME=`whoami`
 # ------ Variables -----
 GIT_INSTALLED=0
 GIT_DIR=0
 DO_INIT=0
 USE_SNAPSHOTS=0
 USE_GIT=0
+# ------ Default Settings -----
+LOGFILE='MCAdmin.log'
+GIT_BACKUP_MSG="Game Backup"
+SCREEN_NAME='minecraft'
+SHUTDOWN_TIMER=10
+MC_JAR='minecraft_server.jar'
+OPTIONS='nogui'
+MAXHEAP=1024
+MINHEAP=512
+HISTORY=1024
+CPU_COUNT=1
+INVOCATION="java -Xmx\${MAXHEAP}M -Xms\${MINHEAP}M -XX:+UseConcMarkSweepGC \
+-XX:+CMSIncrementalPacing -XX:ParallelGCThreads=\$CPU_COUNT -XX:+AggressiveOpts \
+-jar \$MC_JAR \$OPTIONS"
 # ------ Functions ------
 
 # Creates the settings file with default settings
 makeSettings () {
-	echo "DEBUG=0
-LOGFILE='MCAdmin.log'
-GIT_BACKUP_MSG='Game Backup'
-USE_SNAPSHOTS=0
-USE_GIT=0" > $SETTINGS
-}
-
-# Update the settings file
-updateSettings() {
-	echo "DEBUG=0
-LOGFILE='MCAdmin.log'
-GIT_BACKUP_MSG=$GIT_BACKUP_MSG
+	echo "# 0/1 - Print DEBUG messages to the log
+DEBUG=0
+# Log file name
+LOGFILE=$LOGFILE
+# Commit Message when backing up the game to GIT
+GIT_BACKUP_MSG=\"$GIT_BACKUP_MSG\"
+# 0/1 - Enables the use of snapshots
 USE_SNAPSHOTS=$USE_SNAPSHOTS
-USE_GIT=$USE_GIT" > $SETTINGS
+# 0/1 - Enables GIT backup support
+USE_GIT=$USE_GIT
+# Screen name that the server runs under.  Use this to connect to the server outside of this script.
+SCREEN_NAME=$SCREEN_NAME
+# Amount in time between displaying the shut down message and server shut down
+SHUTDOWN_TIMER=$SHUTDOWN_TIMER
+# Minecraft Server jar file name
+MC_JAR=$MC_JAR
+# Additional minecraft server options
+OPTIONS=$OPTIONS
+# Max Java Heap size in MB
+MAXHEAP=$MAXHEAP
+# Min Java Heap size in MB
+MINHEAP=$MINHEAP
+# Max number of lines to keep in history in the screen
+HISTORY=$HISTORY
+# Number of threads to use running the server
+CPU_COUNT=$CPU_COUNT
+# Command used to start the server
+INVOCATION=\"$INVOCATION\"" > $SETTINGS
 }
 
 # Creates the GIT settings file with default settings
 makeGitSettings () {
-	log 'DEBUG' "Making git settings file"
-	echo '*.txt
+	log "DEBUG" "Making git settings file"
+	echo ".mcadmin
+.mcadmin.git
+.gitignore
+*.txt
 server.properties
-world' > $GIT_SETTINGS
+world" > $GIT_SETTINGS
 }
 
 # Creates the .gitignore file
 makeGitIgnore() {
-	log 'DEBUG' "Making .gitignore file"
-	echo '*.jar
-*.sh' > .gitignore
+	log "DEBUG" "Making .gitignore file"
+	echo "*.jar
+*.sh
+*.log*
+screenlog*" > .gitignore
 }
 
 # Log function, logs passed message to the log file.  Log file
@@ -68,6 +101,7 @@ log () {
 
 # Checks if curl is installed
 checkCurlInstalled() {
+	log "DEBUG" "Entered checkCurlInstalled"
 	if command -v curl >/dev/null; then
 		log "INFO" "Curl is installed"
 		CURL_INSTALLED=1
@@ -80,6 +114,7 @@ checkCurlInstalled() {
 
 # Checks if wget is installed
 checkWgetInstalled() {
+	log "DEBUG" "Entered checkWgetInstalled"
 	if command -v wget >/dev/null; then
 		log "INFO" "wget is installed"
 		WGET_INSTALLED=1
@@ -122,6 +157,7 @@ initGit() {
 		USE_GIT=1
 		if [ $GIT_DIR -eq 0 ]; then
 			GIT_LOG=`git init`
+			makeGitIgnore
 			log "INFO" "$GIT_LOG"
 		else
 			log "WARN" "Tried to initialize a Git repo when one already exists"
@@ -133,6 +169,7 @@ initGit() {
 
 # Downloads the server JAR
 downloadJar() {
+	log "DEBUG" "Entered downloadJar"
 	if [ $USE_SNAPSHOTS -eq 1 ]; then
 		downloadSnapshotJar
 	else
@@ -190,25 +227,86 @@ downloadSnapshotJar() {
 }
 
 startServer() {
-
+	log "DEBUG" "Entered startServer"
+	log "DEBUG" "Attempting to start $MC_JAR as $USERNAME"
+	if  pgrep -u $USERNAME -f $MC_JAR > /dev/null
+	then
+		echo "$MC_JAR is already running!"
+	else
+		log "INFO" "Starting $MC_JAR"
+		log "DEBUG" "Invocing: $INVOCATION"
+		echo "Starting $MC_JAR"
+		screen -h $HISTORY -dmLS $SCREEN_NAME $INVOCATION
+		sleep 1
+		if  pgrep -u $USERNAME -f $MC_JAR > /dev/null
+		then
+			echo "$MC_JAR is now running!"
+			log "INFO" "$MC_JAR started"
+		else
+			echo "ERROR!  $MC_JAR failed to start!"
+			log "FATAL" "$MC_JAR failed to start"
+			exit 2
+		fi
+	fi
 }
 
 stopServer() {
-
+	log "DEBUG" "Entered stopServer"
+	if  pgrep -u $USERNAME -f $MC_JAR > /dev/null
+	then
+		log "INFO" "$MC_JAR coming down"
+		screen -p 0 -S $SCREEN_NAME -X eval 'stuff \"say SERVER SHUTTING DOWN IN $SHUTDOWN_TIMER SECONDS.\"\015'
+		sleep $SHUTDOWN_TIMER
+		screen -p 0 -S $SCREEN_NAME -X eval 'stuff \"stop\"\015'
+		sleep 10
+	else
+		echo "Error!  $MC_JAR is not running."
+		log "ERROR" "Attempted to stop $MC_JAR when it was not running"
+	fi
+	if  pgrep -u $USERNAME -f $MC_JAR > /dev/null
+	then
+		echo "Error!  Could not stop $MC_JAR"
+		log "ERROR" "Could not stop $MC_JAR"
+	else
+		echo "$MC_JAR stopped"
+		log "INFO" "$MC_JAR stopped"
+	fi
 }
 
 saveWorld() {
-
+	log "DEBUG" "Entered saveWorld"
+	if pgrep -u $USERNAME -f $MC_JAR > /dev/null
+	then
+		echo "Saving world..."
+		log "INFO" "Saving world"
+		screen -p 0 -S $SCREEN_NAME -X eval 'stuff \"save-all\"\015'
+		sleep 10
+	else
+		echo "Error!  Cannot save as server is not running."
+		log "ERROR" "Server is not running, cannot save."
+	fi
 }
 
 viewServer() {
-
+	log "DEBUG" "Entered viewServer"
+	if pgrep -u $USERNAME -f $MC_JAR > /dev/null
+	then
+		screen -r $SCREEN_NAME
+	else
+		echo "Error!  Server is not running."
+		log "ERROR" "Cannot view server as it is not running."
+	fi
 }
 
 gitBackup() {
 	log "INFO" "Performing Git Backup"
 	if [ $USE_GIT -eq 1 ]; then
 		if [ -f $GIT_SETTINGS ]; then
+			# Force server to save first if running
+			if pgrep -u $USERNAME -f $MC_JAR > /dev/null
+			then
+				saveWorld
+			fi
 			while read line; do
 				git add $line
 			done < $GIT_SETTINGS
@@ -236,6 +334,8 @@ printUsage () {
 	echo "	view 		Connects to the Screen running the Minecraft Server."
 	echo "	git 		Save the game to the Git repository.  Must have configured to use Git."
 	echo "	useGit 		Configures MCAdmin to start using Git."
+	echo "  init        Initialized MCAdmin.  If a configuration already exists, asks if you"
+	echo "              want to overwrite it."
 }
 
 # The initalizing function.  Is called when the script is ran from a new directory.
@@ -254,10 +354,17 @@ do_init() {
 	echo "changes..."
 	echo ""
 	echo "Would you like to use Git to backup your Minecraft Saves? [y/N] "
-	read USE_GIT
-
-	if [ $USE_GIT == "y" ] || [ $USE_GIT == "Y" ]; then
+	read -s USE_GIT
+	
+	if [ $DEBUG -eq 1 ]; then
+		echo "USE_GIT Entered: |$USE_GIT|"
+	fi
+	if [[ $USE_GIT = '' ]]; then
+		USE_GIT=0;
+	elif [ $USE_GIT == "y" ] || [ $USE_GIT == "Y" ]; then
 		initGit
+	else 
+		USE_GIT=0
 	fi
 
 	echo ""
@@ -272,9 +379,14 @@ do_init() {
 	echo "IF YOU CHOSE TO USE SNAPSHOTS!"
 	echo ""
 	echo "Would you like to use Snapshots? [y/N] "
-	read USE_SNAPSHOTS
-
-	if [ $USE_SNAPSHOTS == "y" ] || [ $USE_SNAPSHOTS == "Y" ]; then
+	read -s USE_SNAPSHOTS
+	
+	if [ $DEBUG -eq 1 ]; then
+		echo "USE_SNAPSHOTS Entered: |$USE_SNAPSHOTS|"
+	fi
+	if [[ $USE_SNAPSHOTS = '' ]]; then
+		USE_SNAPSHOTS=0
+	elif [ $USE_SNAPSHOTS == "y" ] || [ $USE_SNAPSHOTS == "Y" ]; then
 		USE_SNAPSHOTS=1
 	else 
 		USE_SNAPSHOTS=0
@@ -285,7 +397,7 @@ do_init() {
 	downloadJar
 
 	# Update the settings file now that we are down initializing the server
-	updateSettings
+	makeSettings
 
 	if [ $USE_GIT -eq 1 ]; then
 		echo "Git has been enabled.  You can set up a cron job to run the git backup"
@@ -298,47 +410,91 @@ do_init() {
 	echo "Setup complete!"
 
 }
+
+reinit() {
+	log "INFO" "Entered reinit"
+	if [ -f $SETTINGS ]; then
+		echo "WARNING!  MCAdmin settings already present!  Are you sure you"
+		echo "want to reinitialize the settings?  All your settings will be"
+		echo "lost and reset to the default settings."
+		echo ""
+		echo "This will not affect your current sever configuration or game"
+		echo "files."
+		echo ""
+		echo "If you have git backups enabled, we will peform a back before"
+		echo "your settings are reset.  You can always go and revert them"
+		echo ""
+		echo ""
+		echo "Continue with Reinitialization?  [y/N]?"
+		read REINIT
+		
+		if [[ $REINIT = '' ]]; then
+			echo "Reinitialization cancled"
+			exit 0;
+		elif [ $REINIT == 'y' ] || [ $REINIT == 'Y' ]; then
+			echo "ARE YOU REALLY SURE YOU WANT TO REINIALIZE? [y/N]"
+			read REINIT
+			if [[ $REINIT = '' ]]; then
+				echo "Reinitialization cancled"
+				exit 0;
+			elif [ $REINIT == 'y' ] || [ $REINIT == 'Y' ]; then
+				echo "Ok, reinitalizing!"
+				checkIfGitDir
+				if [ $GIT_DIR -eq 1 ]; then
+					echo "Performing one last Git Backup"
+					gitBackup
+					read -p "Backup complete.  Hit [Enter] to begin reinitalization"
+				fi
+				do_init
+			fi
+		fi
+			
+	fi
+}
 # ------- End Functions ------
 
-#  Check if the settings file exists
+# Check if we need to set up for the first time
 if [ ! -f $SETTINGS ] ; then
-	makeSettings
-	DO_INIT=1
+	do_init
+	exit 0
 fi
-source $SETTINGS
+
 # Check if the Git settings file exists
 if [ ! -f $GIT_SETTINGS ] ; then
     makeGitSettings
 fi
 
-# Check if we need to set up for the first time
-if [ $DO_INIT -eq 1 ]; then
-	do_init
-	exit 0
-fi
+source $SETTINGS
 
 # Parse the options now
 case "$1" in
 	"help")
-	
+		printUsage
+	;;
+	"h")
+		printUsage
 	;;
 	"start")
-
+		startServer
 	;;
 	"stop")
-
+		stopServer
 	;;
 	"save")
-
+		saveServer
 	;;
 	"view")
-
+		viewServer
 	;;
 	"git")
-
+		gitBackup
 	;;
 	"useGit")
-
+		USE_GIT=1
+		makeSettings
+	;;
+	"init")
+		reinit
 	;;
 	*) printUsage; exit 1;;
 esac
